ecmascript/parser/tests/jsx/errors/wrong-closing-tag/input.js.stderr
error: Expected corresponding JSX closing tag for <Foo>
 --> $DIR/tests/jsx/errors/wrong-closing-tag/input.js:1:6
  |
1 | <Foo></Bar>
  |      ^^^^^^

